{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 22,
  "lineage": "0bbbc092-879f-83eb-c7e1-bd0da16dab0a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:509729018777:loadbalancer/terraform-example-balancer",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b",
              "us-east-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "terraform-example-balancer-1226779573.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-example-balancer",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:us-east-2:509729018777:certificate/b2d223fa-cfa1-4780-a1e0-09bd42f78d9e"
              },
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-example-balancer",
            "security_groups": [
              "sg-01dccb51838399cdc"
            ],
            "source_security_group": "509729018777/terraform-example-elb",
            "source_security_group_id": "sg-01dccb51838399cdc",
            "subnets": [
              "subnet-b0f910db",
              "subnet-c5018e89",
              "subnet-c5efc8bf"
            ],
            "tags": {
              "Name": "terraform-example-martu"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:509729018777:security-group/sg-01dccb51838399cdc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01dccb51838399cdc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-elb",
            "name_prefix": null,
            "owner_id": "509729018777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-example-martu"
            },
            "timeouts": null,
            "vpc_id": "vpc-2bb57440"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:509729018777:security-group/sg-033b684cdd40f9794",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-033b684cdd40f9794",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-example-instance",
            "name_prefix": null,
            "owner_id": "509729018777",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-example-martu"
            },
            "timeouts": null,
            "vpc_id": "vpc-2bb57440"
          }
        }
      ]
    }
  ]
}